--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <title>HTML5 Template</title>
+    <title>El SuperQuizz</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -11,7 +12,9 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="scripts.js"></script>
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
